test(day-23): add second puzzle
Signed-off-by: Alfi Maulana <alfi.maulana.f@gmail.com>

--- a/day-23/Makefile
+++ b/day-23/Makefile
@@ -3,6 +3,7 @@
 %: %.cpp
 	@clang++ -std=c++20 $< -o $@
 
-test: puzzle-1
+test: puzzle-2
 	@echo "Testing Day 23: LAN Party..."
 	@cat input.txt | ./puzzle-1
+	@cat input.txt | ./puzzle-2
